# ProVisE

./: .env.example  .gitignore  ASSET_LICENSES.md  LICENSE  README.md  expansion_results.js  index.html  pyproject.toml  script.js  styles.css
.github/workflows/: ci.yml
configs/: README.md
configs/benchmark_suites/: validated_spatial.yaml
configs/protocol_specs/: README.md  agentic_parser_ops_protocol.yaml  agentic_point_marker.yaml  binary_color_presence.yaml  dense_depth_ab.yaml  direction_grid.yaml  generic_vlm_fallback.yaml  instance_marker_count.yaml  label_code.yaml  region_mask.yaml  state_similarity.yaml  trajectory.yaml
configs/protocols/: README.md
docs/: agentic_benchmark_adapter.md  unified_sample_schema.md
provise/: __init__.py  cli.py  paths.py  reporting.py
provise/benchmark/: __init__.py  ingestion.py  media.py  package.py  schema.py  tasks.py
provise/commands/: __init__.py  (+4 more)
scripts/: convert_roboafford_to_unified.py  convert_sat_to_unified.py  run_protocol_eval.py  smoke_openai_compatible.sh  smoke_test.sh
tests/: test_agentic_builder.py  test_agentic_ingestion.py  test_agentic_protocols.py  test_agentic_regressions.py  test_benchmark_package.py  test_cli.py  test_depth.py  test_eval_vlm.py  test_evaluation_cli.py  test_failure_attribution.py  test_label_code.py  test_metric_ops.py  test_model_paths.py  test_openai_compatible.py  test_openai_compatible_model.py  test_parser_ops.py  test_paths.py  test_registry.py  test_run_agentic_benchmark.py  test_run_protocol_eval.py  test_spatial_suite.py  test_text_baseline.py  test_trajectory.py
(+50 files in other folders)
